# meilisearch-rust

./: Cargo.toml
data.ms/: instance-uid
data.ms/index_uuids/: data.mdb  lock.mdb
data.ms/updates/: lock.mdb
src/: main.rs
