[package]
name = "meilisearch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde_json= "1.0.59"
meilisearch-sdk = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
pinyin= "0.9"